--- a/index02.html
+++ b/index02.html
@@ -17,7 +17,7 @@
 <!-- Contenu principal -->
 <h1>Ma première page avec du style</h1>
 
-<p>Bienvenue sur ma page avec du style! 
+<p>Bienvenue sur ma page avec du style qui n'a jamais servie! 
 
 <p>Il lui manque des images, mais au moins, elle a du style. Et elle a desliens, même s'ils ne mènent nulle part...
 &hellip;
